files/hello-world-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world
  labels:
    app: myapp
    ver: nodeport
spec:
  containers:
    - name: hello-world
      image: arm64v8/nginx:latest
      ports:
        - containerPort: 80
