files/headless-pod.yaml
apiVersion: v1
kind: Service
metadata:
  name: headless-service
spec:
  selector:
    app: myapp
    ver: headless
  ports:
    - port: 8080
  clusterIP: None
