files/service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-cyberhades
spec:
  type: ExternalName
  externalName: cyberhades.com
