files/service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer-service
spec:
  type: LoadBalancer
  selector:
    app: myapp
    ver: "loadbalancer"
  ports:
    - port: 80
      targetPort: 8080
