files/service-nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: myapp
    ver: "nodeport"
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
