files/service-without-select.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-without-select
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
