files/ingress-host-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress-host
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ingress-test.info
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: servicio-v1
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: servicio-v2
                port:
                  number: 80
